<resources>
    <string name="app_name">SCIprojekti</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tuote_prompt">Tuotteen nimi</string>
    <string-array name="tuote_array">
        <item>Maito</item>
        <item>Omena</item>
        <item>Leipä</item>
        <item>Soijarouhe</item>
        <item>kokis</item>
        <item>avocado</item>
        <item>jauhelliha</item>
        <item>test</item>
    </string-array>


    <!-- Oma profiili -->
    <string name="teemu">Teemu Teekkari</string>
    <string name="nimi">Nimi:</string>
    <string name="ikaryhma">Ikäryhmä:</string>
    <string name="sukupuoli">Sukupuoli:</string>
    <!--<string name="koulutus">Koulutus:</string>-->
    <string name="ruokavalio">Ruokavalio:</string>
    <string name="allergiat">Allergiat:</string>
    <!--<string name="kulutustottumukset">Kulutustottumukset:</string>-->
    <string name="arvot">Preferenssit:</string>
    <string name="seek_hiilijalanjalki">Ostoslistan hiilijalanjälki:</string>
    <string name="seek_vesijalanjalki">Ostoslistan vesijalanjälki:</string>
    <string name="ei_maaritelty">Ei vielä määritelty</string>
    <string name="tyhja_ostoslista">Ostoslistasi on tyhjä</string>

    <string name="profiili_desc">Profiilitietosi auttavat meitä suosittelemaan juuri sinulle sopivia tuotteita.</string>

    <string name="edit_button">Muokkaa</string>

    <!-- Muokkaa profiilia -->
    <string name="muokkaa_profiilia">Muokkaa profiilia</string>
    <string name="syota_nimi">Nimi</string>
    <string name="syota_ikaryhma">Ikäryhmä</string>
    <string name="syota_sukupuoli">Sukupuoli</string>
    <!--<string name="syota_koulutus">Koulutus</string>-->
    <string name="syota_ruokavalio">Ruokavalio</string>
    <string name="syota_allergiat">Allergiat</string>
    <!--<string name="syota_kulutustottumukset">Kulutustottumukset</string>-->
    <string name="ok_button">OK</string>
    <string name="contentdesc">contentdesc</string>

    <string name="kotimaisuus">Kotimaisuus</string>
    <string name="eettisyys">Eettisyys</string>
    <string name="edullisuus">Edullisuus</string>
    <string name="hiilijalanjalki_min">Hiilijalanjäljen minimointi</string>
    <string name="vesijalanjalki_min">Vesijalanjäljen minimointi</string>

    <!-- Pudotusvalikko ikäryhmille -->
    <string-array name="ikaryhma_array">
        <item>15–25</item>
        <item>25–40</item>
        <item>40–55</item>
        <item>55+</item>
    </string-array>

    <!-- Pudotusvalikko sukupuolelle -->
    <string-array name="sukupuoli_array">
        <item>Nainen</item>
        <item>Mies</item>
        <item>Muu</item>
    </string-array>

    <!-- Pudotusvalikko ruokavalioille -->
    <string-array name="ruokavalio_array">
        <item>Sekasyöjä</item>
        <item>Pescovegetaristi</item>
        <item>Lakto-ovo-vegetaristi</item>
        <item>Vegaani</item>
    </string-array>

    <!-- Pudotusvalikko arvoille -->
    <string-array name="arvo_array">
        <item>Kotimaisuus</item>
        <item>Eettisyys</item>
        <item>Edullisuus</item>
        <item>Hiilijalanjäljen minimointi</item>
        <item>Vesijalanjäljen minimointi</item>
    </string-array>



    <string name="vesi_Maito">3</string>

</resources>
