<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:contentDescription="@string/contentdesc" />

        <!--
            Näihin riveihin saa laitettuu taustakuvan
            android:src="@drawable/nav_menu_header_bg"
            app:srcCompat="@drawable/nav_menu_header_bg"-->

        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="@dimen/fab_margin"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:clickable="true"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/man"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="3dp"
            android:focusable="true" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_marginTop="-1dp"
            android:background="#EB6EDFAA"
            android:paddingBottom="24dp">


            <TextView
                android:id="@+id/omaprofiili_nimi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="85dp"
                android:gravity="center"
                android:text="@string/teemu"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/edit"
                android:layout_width="66dp"
                android:layout_height="34dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="183dp"
                android:layout_marginEnd="21dp"
                android:layout_marginRight="21dp"
                android:background="#A4CEE7"
                android:text="@string/edit_button"
                android:textSize="12sp" />

        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"

            >

            <TextView
                android:id="@+id/ikaryhma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/ikaryhma"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kulutustottumukset"
                app:layout_constraintTop_toTopOf="parent"
                />


            <TextView
                android:id="@+id/sukupuoli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/sukupuoli"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ikaryhma"
                />

            <TextView
                android:id="@+id/koulutus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:text="@string/koulutus"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sukupuoli"
                android:focusable="true" />

            <TextView
                android:id="@+id/ruokavalio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/ruokavalio"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/koulutus"
                 />

            <TextView
                android:id="@+id/kulutustottumukset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/kulutustottumukset"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ruokavalio"
                />

            <TextView
                android:id="@+id/prof_ikaryhma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/ei_maaritelty"
                app:layout_constraintLeft_toLeftOf="@+id/ikaryhma"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ikaryhma"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/prof_sukupuoli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/ei_maaritelty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.028"
                app:layout_constraintStart_toEndOf="@+id/sukupuoli"
                app:layout_constraintTop_toBottomOf="@+id/prof_ikaryhma" />

            <TextView
                android:id="@+id/prof_koulutus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="208dp"
                android:layout_marginRight="208dp"
                android:text="@string/ei_maaritelty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prof_sukupuoli" />

            <TextView
                android:id="@+id/prof_ruokavalio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/ei_maaritelty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.038"
                app:layout_constraintStart_toEndOf="@+id/ruokavalio"
                app:layout_constraintTop_toBottomOf="@+id/prof_koulutus" />

            <TextView
                android:id="@+id/prof_kulutustottumukset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/ei_maaritelty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.039"
                app:layout_constraintStart_toEndOf="@+id/kulutustottumukset"
                app:layout_constraintTop_toBottomOf="@+id/prof_ruokavalio" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</ScrollView>

